// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fontOpticalSizing renders 0 1`] = `
Array [
  .c0 {
  font-optical-sizing: 0;
}

<div
    className="c0"
  />,
  .c0 {
  font-optical-sizing: 0;
}

<div
    className="c0"
  />,
  .c0 {
  font-optical-sizing: 0;
}

<div
    className="c0"
  />,
  .c0 {
  font-optical-sizing: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`fontOpticalSizing renders function 1`] = `
Array [
  .c0 {
  font-optical-sizing: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  font-optical-sizing: has;
}

<div
    className="c0"
  />,
  .c0 {
  font-optical-sizing: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  font-optical-sizing: has;
}

<div
    className="c0"
  />,
]
`;

exports[`fontOpticalSizing renders invalid theme path 1`] = `
Array [
  .c0 {
  font-optical-sizing: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  font-optical-sizing: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  font-optical-sizing: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  font-optical-sizing: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`fontOpticalSizing renders negative number 1`] = `
Array [
  .c0 {
  font-optical-sizing: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  font-optical-sizing: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  font-optical-sizing: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  font-optical-sizing: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`fontOpticalSizing renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  font-optical-sizing: July;
}

@media screen and (min-width:November) {
  .c0 {
    font-optical-sizing: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-optical-sizing: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-optical-sizing: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    font-optical-sizing: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  font-optical-sizing: July;
}

@media screen and (min-width:November) {
  .c0 {
    font-optical-sizing: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-optical-sizing: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-optical-sizing: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    font-optical-sizing: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  font-optical-sizing: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    font-optical-sizing: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-optical-sizing: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-optical-sizing: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    font-optical-sizing: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  font-optical-sizing: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    font-optical-sizing: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-optical-sizing: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-optical-sizing: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    font-optical-sizing: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`fontOpticalSizing renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    font-optical-sizing: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-optical-sizing: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-optical-sizing: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    font-optical-sizing: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    font-optical-sizing: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-optical-sizing: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-optical-sizing: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    font-optical-sizing: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    font-optical-sizing: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-optical-sizing: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-optical-sizing: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    font-optical-sizing: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    font-optical-sizing: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-optical-sizing: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-optical-sizing: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    font-optical-sizing: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`fontOpticalSizing renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  font-optical-sizing: July;
}

@media May {
  .c0 {
    font-optical-sizing: August;
  }
}

@media April {
  .c0 {
    font-optical-sizing: September;
  }
}

@media January {
  .c0 {
    font-optical-sizing: November;
  }
}

@media April {
  .c0 {
    font-optical-sizing: August;
  }
}

@media June {
  .c0 {
    font-optical-sizing: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  font-optical-sizing: July;
}

@media May {
  .c0 {
    font-optical-sizing: August;
  }
}

@media April {
  .c0 {
    font-optical-sizing: September;
  }
}

@media January {
  .c0 {
    font-optical-sizing: November;
  }
}

@media April {
  .c0 {
    font-optical-sizing: August;
  }
}

@media June {
  .c0 {
    font-optical-sizing: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  font-optical-sizing: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    font-optical-sizing: November;
  }
}

@media April {
  .c0 {
    font-optical-sizing: January;
  }
}

@media January {
  .c0 {
    font-optical-sizing: December;
  }
}

@media April {
  .c0 {
    font-optical-sizing: April;
  }
}

@media June {
  .c0 {
    font-optical-sizing: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  font-optical-sizing: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    font-optical-sizing: November;
  }
}

@media April {
  .c0 {
    font-optical-sizing: January;
  }
}

@media January {
  .c0 {
    font-optical-sizing: December;
  }
}

@media April {
  .c0 {
    font-optical-sizing: April;
  }
}

@media June {
  .c0 {
    font-optical-sizing: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`fontOpticalSizing renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    font-optical-sizing: July;
  }
}

@media April {
  .c0 {
    font-optical-sizing: August;
  }
}

@media January {
  .c0 {
    font-optical-sizing: September;
  }
}

@media April {
  .c0 {
    font-optical-sizing: November;
  }
}

@media June {
  .c0 {
    font-optical-sizing: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    font-optical-sizing: July;
  }
}

@media April {
  .c0 {
    font-optical-sizing: August;
  }
}

@media January {
  .c0 {
    font-optical-sizing: September;
  }
}

@media April {
  .c0 {
    font-optical-sizing: November;
  }
}

@media June {
  .c0 {
    font-optical-sizing: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    font-optical-sizing: January;
  }
}

@media April {
  .c0 {
    font-optical-sizing: December;
  }
}

@media January {
  .c0 {
    font-optical-sizing: April;
  }
}

@media April {
  .c0 {
    font-optical-sizing: May;
  }
}

@media June {
  .c0 {
    font-optical-sizing: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    font-optical-sizing: January;
  }
}

@media April {
  .c0 {
    font-optical-sizing: December;
  }
}

@media January {
  .c0 {
    font-optical-sizing: April;
  }
}

@media April {
  .c0 {
    font-optical-sizing: May;
  }
}

@media June {
  .c0 {
    font-optical-sizing: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`fontOpticalSizing renders postitive number 1`] = `
Array [
  .c0 {
  font-optical-sizing: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  font-optical-sizing: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  font-optical-sizing: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  font-optical-sizing: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`fontOpticalSizing renders string 1`] = `
Array [
  .c0 {
  font-optical-sizing: July;
}

<div
    className="c0"
  />,
  .c0 {
  font-optical-sizing: July;
}

<div
    className="c0"
  />,
  .c0 {
  font-optical-sizing: June;
}

<div
    className="c0"
  />,
  .c0 {
  font-optical-sizing: June;
}

<div
    className="c0"
  />,
]
`;

exports[`fontOpticalSizing renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`fontOpticalSizing renders valid theme path 1`] = `
Array [
  .c0 {
  font-optical-sizing: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  font-optical-sizing: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  font-optical-sizing: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  font-optical-sizing: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
